<resources>
    <string name="app_name">TeamUp</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="login_button">Войти</string>
    <string name="register_text">Ещё нет аккаунта?</string>
    <string name="register_click">Зарегистроваться!</string>
    <string name="email">email</string>
    <string name="login_text">Имя пользователя</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="long_string">asdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsdasdfsafsafsd</string>
    <string name="expand">V</string>
    <string name="collapse">^</string>
    <string name="quit">Выйти</string>
    <string name="belbin_roles">Роли по Белбину:</string>
    <string name="mbti_roles">Роли по Майерс-Бриггсу</string>
    <string name="lsq_roles">Роли по Хони-Мамфорду</string>
    <string name="title_activity_test_navigation">testNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="confirm_changes">Подтвердить изменения</string>
    <string name="belbin_label">Тест Белбина</string>
    <string name="MBTI_label">Тест Майерс-Бриггса</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="expected_working_hours">Часы работы в неделю</string>
    <string name="confirm">Подтвердить</string>
    <string name="delete">Удалить</string>
    <string name="naming">Название</string>
    <string name="num_of_vacant">Количество вакантных мест</string>
    <string name="not_state">Не указывать</string>
    <string name="online">Онлайн</string>
    <string name="offline">Оффлайн</string>
    <string name="required_specializations">Требуемые специализации</string>
    <string name="required_belbin_roles">Требуемые роли по Белбину</string>
    <string name="change">Изменить</string>
    <string name="worker_slots">Слоты работников</string>
    <string name="add">Добавить</string>
    <string name="pretendings">Претенденты</string>
    <string name="deny">Отклонить</string>
    <string name="apply">Принять</string>
    <string name="salary">Зарплата</string>
    <string name="leave">Покинуть</string>
    <string name="retract_request">Отозавть заявку</string>
    <string name="invite_to_project">Пригласить в проект</string>
    <string name="invite">Пригласить</string>
    <string name="filters">Фильтры</string>
</resources>