<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="project"
            type="com.example.kusashkotlin.data.model.ProjectModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.view.project.EditProjectActivity">

            <TextView
                android:id="@+id/projectEditProjectTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/naming"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/projectEditProjectTitleTextEdit"
                android:layout_width="353dp"
                android:layout_height="47dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/naming"
                android:inputType="textPersonName"
                android:text='@{project.title == null ? "" : project.title}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditProjectTitleTextView"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/projectEditDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditProjectTitleTextEdit" />

            <EditText
                android:id="@+id/projectEditDescriptionTextEdit"
                android:layout_width="360dp"
                android:layout_height="89dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:text='@{project.description == null ? "" : project.description}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditDescriptionTextView" />

            <TextView
                android:id="@+id/projectEditVacantTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/num_of_vacant"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditDescriptionTextEdit" />

            <EditText
                android:id="@+id/projectEditVacantTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/num_of_vacant"
                android:inputType="number"
                android:text='@{project.vacant == null ? "" : String.valueOf(project.vacant) }'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditVacantTextView"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/projectEditCityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/city"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditVacantTextEdit" />

            <EditText
                android:id="@+id/projectEditCityTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text='@{project.city == null ? "" : project.city}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditCityTextView"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/projectEditWorkOnlineTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/remote"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditCityTextEdit" />

            <RadioGroup
                android:id="@+id/projectEditRemoteRadioGroup"
                android:layout_width="301dp"
                android:layout_height="28dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditWorkOnlineTextView">

                <RadioButton
                    android:id="@+id/projectEditRemoteNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_state"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/projectEditRemoteOnline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/projectEditRemoteOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offline"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <TextView
                android:id="@+id/projectEditSpecitalizationsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/required_specializations"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditRemoteRadioGroup" />

            <ListView
                android:id="@+id/projectEditSpecializationsListView"
                android:layout_width="369dp"
                android:layout_height="85dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditSpecitalizationsTextView" />

            <TextView
                android:id="@+id/projectEditRequiredBelbinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/required_belbin_roles"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditSpecializationChangeButton" />

            <ListView
                android:id="@+id/projectEditBelbinListView"
                android:layout_width="369dp"
                android:layout_height="85dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditRequiredBelbinTextView" />

            <Button
                android:id="@+id/projectEditConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/confirm_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditChangeBelbinButton" />

            <Button
                android:id="@+id/projectEditDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditChangeBelbinButton" />

            <Button
                android:id="@+id/projectEditSpecializationChangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditSpecializationsListView" />

            <Button
                android:id="@+id/projectEditChangeBelbinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectEditBelbinListView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

