<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="offer"
    type="com.example.kusashkotlin.data.model.ExecutorOffer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.view.offers.ExecutorOfferEditActivity">

        <TextView
            android:id="@+id/executorOfferDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/executorOfferDescriptionTextEdit"
            android:layout_width="402dp"
            android:layout_height="103dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minLines="2"
            android:text='@{offer.description == null ? "" : offer.description}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executorOfferDescriptionTextView"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/executorOfferSalaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/expected_salary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executorOfferDescriptionTextEdit" />

        <EditText
            android:id="@+id/exectorOfferSalaryTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/expected_salary"
            android:inputType="number"
            android:text='@{offer.salary == null ? "" : String.valueOf(offer.salary)}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executorOfferSalaryTextView"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/executorOfferWorkingHoursTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/expected_working_hours"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exectorOfferSalaryTextEdit" />

        <EditText
            android:id="@+id/executorOfferWorkingHoursTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/expected_working_hours"
            android:inputType="number"
            android:text='@{offer.workHours == null ? "" : String.valueOf(offer.workHours)}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executorOfferWorkingHoursTextView"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/executorOfferConfimButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/confirm_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executorOfferWorkingHoursTextEdit" />

        <Button
            android:id="@+id/executorOfferDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/delete"
            android:backgroundTint="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/executorOfferConfimButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>